--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dankfingers",
-  "homepage": "https://dankfingers.com",
+  "homepage": "https://www.dankfingers.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
