--- a/package.json
+++ b/package.json
@@ -12,19 +12,22 @@
     "gatsby-plugin-facebook-pixel": "^1.0.3",
     "gatsby-plugin-favicon": "^3.1.6",
     "gatsby-plugin-google-tagmanager": "^2.3.3",
-    "gatsby-plugin-manifest": "^2.4.9",
+    "gatsby-plugin-manifest": "^2.4.21",
     "gatsby-plugin-netlify": "^2.3.3",
     "gatsby-plugin-netlify-cache": "^1.2.0",
     "gatsby-plugin-offline": "^3.2.7",
     "gatsby-plugin-react-helmet": "^3.3.2",
     "gatsby-plugin-robots-txt": "^1.5.1",
     "gatsby-plugin-sass": "^2.3.2",
-    "gatsby-plugin-sharp": "2.2.2",
+    "gatsby-plugin-sharp": "^2.6.24",
     "gatsby-plugin-sitemap": "^2.4.3",
     "gatsby-plugin-styled-components": "^3.3.2",
+    "gatsby-remark-images-contentful": "^2.3.12",
+    "gatsby-source-contentful": "^2.3.34",
     "gatsby-source-filesystem": "^2.3.8",
     "gatsby-source-strapi": "0.0.10",
-    "gatsby-transformer-sharp": "2.2.2",
+    "gatsby-transformer-sharp": "^2.5.12",
+    "gatsby-transformer-sqip": "^2.3.24",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -35,6 +38,7 @@
     "reactstrap": "^8.4.1",
     "reactstrap-form-fields": "^1.0.6",
     "reactstrap-json-nav": "^1.0.2",
+    "sharp": "^0.25.4",
     "slick-carousel": "^1.8.1",
     "styled-components": "^4.4.1"
   },
