--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-source-strapi": "0.0.10",
     "gatsby-transformer-sharp": "^2.5.12",
     "gatsby-transformer-sqip": "^2.3.24",
+    "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -55,7 +56,9 @@
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "builddeploy": "gatsby build && gh-pages -d public",
+    "deploy": "gh-pages -d public"
   },
   "repository": {
     "type": "git",
